[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Kevin Oberlies <favilo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
chrono = "0.4.19"
colored = "2.0.0"
fern = { version = "0.6.0", features = ["colored"] }
itertools = "0.9.0"
log = "0.4.11"
ndarray = "0.14.0"
regex = "1.4.2"
serde = "1.0.117"
serde_derive = "1.0.117"
